# temp_lb

./: .gitignore  README.md
deploy0/: .terraform.lock.hcl  agw.tf  bastion.tf  lb.tf  locals.tf  main.tf  management-server.tf  nat-gateway.tf  outputs.tf  variables.tf
deploy1/: custom_data.yml  main.tf  vmss.tf
deploy2/: custom_data.yml  main.tf  outputs.tf  variables.tf  versions.tf  vmss.tf
switch/: README.md  README.rst  pyproject.toml
switch/switch/: main.py  prepare_env.sh  script.sh
