[tool.poetry]
name = "switch"
version = "0.1.0"
description = ""
authors = ["Lars Nielsen <lars.nielsen@forter.com>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-mgmt-network = "^19.3.0"
click = "^8.0.0"
azure-core = "^1.21.1"
azure-mgmt-resource = "^20.0.0"
azure-identity = "^1.7.1"
azure-mgmt-compute = "^23.1.0"
azure-mgmt-storage = "^19.0.0"
azure-monitor-query = "^1.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
